add content type for different file.

--- a/show.html
+++ b/show.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="file?get.js">
+    <script src="file?get.js"></script>
+    <script>
       window.onload = getVocabulary;
     </script>
   </head>
