--- a/show.html
+++ b/show.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="file?style.css">
     <script src="file?get.js"></script>
     <script>
       window.onload = getVocabulary;
