clear the search textfield when to presse the enter, show all the vocabularys when to load the page.

--- a/show.html
+++ b/show.html
@@ -3,9 +3,9 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="file?style.css">
     <script src="file?get.js"></script>
-    <!-- <script>
+    <script>
       window.onload = getVocabulary;
-    </script> -->
+    </script>
   </head>
   <body>
     <audio controls='controls' hidden='true' id='sound'>
