add the status of searching vocabulary, and change the list from unordered to ordered(reversed).

--- a/show.html
+++ b/show.html
@@ -14,7 +14,7 @@
     </audio>
     <div id='search_div'>
       <div id='search_text_div' class='top-left'>
-	<input id='search_text' type='text' onkeypress='search(event)' />
+	<input id='search_text' type='text' onkeyup='search(event)' />
       </div>
       <div id='search_detail_div' class='top-right'></div>
     </div>
