add detail of vocabulary by showing the whole website of oxford.

--- a/show.html
+++ b/show.html
@@ -18,6 +18,9 @@
       </div>
       <div id='search_detail_div' class='top-right'></div>
     </div>
-    <div id='vocabulary_list' class='center'></div>
+    <div id='vocabulary_div'>
+      <div id='vocabulary_list' class='center-left'></div>
+      <div id='vocabulary_detail' class='center-right'>center-right</div>
+    </div>
   </body>
 </html>
