if the searching word exists, then go to the ancher.

--- a/show.html
+++ b/show.html
@@ -20,7 +20,7 @@
     </div>
     <div id='vocabulary_div'>
       <div id='vocabulary_list' class='center-left'></div>
-      <div id='vocabulary_detail' class='center-right'>center-right</div>
+      <div id='vocabulary_detail' class='center-right'></div>
     </div>
   </body>
 </html>
