add a div for showing the relative words.

--- a/show.html
+++ b/show.html
@@ -15,6 +15,13 @@
     <div id='search_div'>
       <div id='search_text_div' class='top-left'>
 	<input id='search_text' type='text' onkeyup='search(event)' />
+	<div id='relative_div' class='relative' hidden='true'>
+	  <ul>
+	    <li>123456</li>
+	    <li>123456</li>
+	    <li>123456</li>
+	  </ul>
+	</div>
       </div>
       <div id='search_detail_div' class='top-right'></div>
     </div>
