can get the relative word and search by it.

--- a/show.html
+++ b/show.html
@@ -14,7 +14,7 @@
     </audio>
     <div id='search_div'>
       <div id='search_text_div' class='top-left'>
-	<input id='search_text' type='text' onkeyup='search(event)' />
+	<input id='search_text' type='text' onkeyup='query(event)' />
 	<div id='relative_div' class='relative' hidden='true'>
 	  <ul>
 	    <li>123456</li>
