--- a/show.html
+++ b/show.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <audio controls='controls' hidden='true' id='sound'>
-      <source src='file?media/english/uk_pron/h/hel/hello/hello__gb_1.mp3' type='audio/mpeg'>
+      <source src='' type='audio/mpeg'>
 	Your browser does not support the audio element.
     </audio>
     <div id='search_div'>
