--- a/show.html
+++ b/show.html
@@ -22,7 +22,11 @@
     </div>
     <div id='vocabulary_div'>
       <div id='vocabulary_list' class='center-left'></div>
-      <div id='vocabulary_detail' class='center-right'></div>
+      <div id='vocabulary_detail' class='center-right'>
+	<a onclick='getArticle()'>Show</a>
+	<object id='pdf' data="" type="application/pdf" width='100%' height='90%'>
+	</object>
+      </div>
     </div>
   </body>
 </html>
