--- a/show.html
+++ b/show.html
@@ -24,7 +24,7 @@
       <div id='vocabulary_list' class='center-left'></div>
       <div id='vocabulary_detail' class='center-right'>
 	<a onclick='getArticle()'>Show</a>
-	<object id='pdf' data="" type="application/pdf" width='100%' height='90%'>
+	<object id='pdf' data="file?article/JavaScript-The-Good-Parts.pdf" type="application/pdf" width='100%' height='90%'>
 	</object>
       </div>
     </div>
