--- a/show.html
+++ b/show.html
@@ -22,8 +22,15 @@
     </div>
     <div id='vocabulary_div'>
       <div id='vocabulary_list' class='center-left'></div>
+      <div id='article_list' class='center-middle'>
+	Article List
+	<form action="/upload" method="post" enctype="multipart/form-data">
+	  <input id='file_upload' type='file'></input>
+	  <input type="button" value="Upload" onclick='uploadFile()'>
+	</form>
+      </div>
       <div id='vocabulary_detail' class='center-right'>
-	<a onclick='getArticle()'>Show</a>
+	<!-- <a onclick='getArticle()'>Show</a> -->
 	<object id='pdf' data="file?article/JavaScript-The-Good-Parts.pdf" type="application/pdf" width='100%' height='90%'>
 	</object>
       </div>
