--- a/show.html
+++ b/show.html
@@ -31,7 +31,7 @@
       </div>
       <div id='vocabulary_detail' class='center-right'>
 	<!-- <a onclick='getArticle()'>Show</a> -->
-	<object id='pdf' data="file?article/JavaScript-The-Good-Parts.pdf" type="application/pdf" width='100%' height='90%'>
+	<object id='pdf' data="file?article/emacs_keylist.pdf" type="application/pdf" width='100%' height='90%'>
 	</object>
       </div>
     </div>
