add the function of inserting an article.

--- a/show.html
+++ b/show.html
@@ -25,6 +25,7 @@
       <div id='article_list' class='center-middle'>
 	Article List
 	<form action="/upload" method="post" enctype="multipart/form-data">
+	  Name: <input id='file_name' type='text' />
 	  <input id='file_upload' type='file'></input>
 	  <input type="button" value="Upload" onclick='uploadFile()'>
 	</form>
