--- a/show.html
+++ b/show.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="file?style.css">
     <script src="file?get.js"></script>
     <script>
-      window.onload = getVocabulary;
+      window.onload = init;
     </script>
   </head>
   <body>
@@ -22,17 +22,20 @@
     </div>
     <div id='vocabulary_div'>
       <div id='vocabulary_list' class='center-left'></div>
-      <div id='article_list' class='center-middle'>
+      <div id='article' class='center-middle'>
 	Article List
 	<form action="/upload" method="post" enctype="multipart/form-data">
 	  Name: <input id='file_name' type='text' />
 	  <input id='file_upload' type='file'></input>
 	  <input type="button" value="Upload" onclick='uploadFile()'>
 	</form>
+	<div id='article_list'>
+	  
+	</div>
       </div>
       <div id='vocabulary_detail' class='center-right'>
 	<!-- <a onclick='getArticle()'>Show</a> -->
-	<object id='pdf' data="file?article/emacs_keylist.pdf" type="application/pdf" width='100%' height='90%'>
+	<object id='pdf' data="file?article/JavaScript-The-Good-Parts.pdf" type="application/pdf" width='100%' height='90%'>
 	</object>
       </div>
     </div>
