--- a/show.html
+++ b/show.html
@@ -32,8 +32,8 @@
 	<div id='article_list'>	  
 	</div>
       </div>
-      <div id='separator' class='center-separator'><a onclick="showArticleList()"><></a></div>
-      <div id='vocabulary_detail' class='center-right'>
+      <div id='separator' class='center-separator'><a id='separator_a' onclick="showArticleList()"><</a></div>
+      <div id='article_content' class='center-right'>
 	<!-- <a onclick='getArticle()'>Show</a> -->
 	<object id='pdf' data="file?article/JavaScript-The-Good-Parts.pdf" type="application/pdf" width='100%' height='90%'>
 	</object>
