Remove the part of article.

--- a/show.html
+++ b/show.html
@@ -22,7 +22,7 @@
     </div>
     <div id='vocabulary_div'>
       <div id='vocabulary_list' class='center-left'></div>
-      <div id='article_div' class='center-middle'>
+      <!-- <div id='article_div' class='center-middle'>
 	Article List
 	<form action="/upload" method="post" enctype="multipart/form-data">
 	  Name: <input id='file_name' type='text' />
@@ -33,11 +33,11 @@
 	</div>
       </div>
       <div id='separator' class='center-separator'><a id='separator_a' onclick="showArticleList()"><</a></div>
-      <div id='article_content' class='center-right'>
-	<!-- <a onclick='getArticle()'>Show</a> -->
-	<object id='pdf' data="file?article/JavaScript_The_Good_Parts.pdf" type="application/pdf" width='100%' height='90%'>
+      <div id='article_content' class='center-right'> -->
+	<!-- //<a onclick='getArticle()'>Show</a> -->
+	<!-- <object id='pdf' data="file?article/JavaScript_The_Good_Parts.pdf" type="application/pdf" width='100%' height='90%'>
 	</object>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
