--- a/show.html
+++ b/show.html
@@ -6,6 +6,7 @@
     <script>
       window.onload = init;
     </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
   <body>
     <audio controls='controls' hidden='true' id='sound'>
